2006-03-28  Jon A. Cruz  <jon@joncruz.org>

	* src/interface.cpp, src/dialogs/eek-color-def.h,
	  src/dialogs/eek-preview.h, src/dialogs/eek-preview.cpp,
	  src/dialogs/swatches.h, src/dialogs/swatches.cpp:

	  Changed objects to only get liked to "linkable" colors.
	
2006-03-28  Jon A. Cruz  <jon@joncruz.org>

	* src/interface.cpp, src/dialogs/swatches.cpp:

	  Objects now change when linked colors change.
	
2006-03-28  Jon A. Cruz  <jon@joncruz.org>

	* src/dialogs/eek-color-def.h, src/dialogs/eek-color-def.cpp,
	  src/dialogs/eek-preview.h, src/dialogs/eek-preview.cpp,
	  src/dialogs/swatches.h, src/dialogs/swatches.cpp:

	  Experimenting with linked colors.
	
2006-03-26  Aaron C. Spike  <aaron@ekips.org>

	* inkscape.pod, src/main.cpp:

	  Added --export-area-canvas (-C). Area specifying options
	  (--export-area, --export-area-canvas and --export-area-drawing)
	  can now be used in combination with --export-id.

2006-03-23  Jon A. Cruz  <jon@joncruz.org>

	* src/dialogs/eek-color-def.cpp, src/dialogs/eek-color-def.h,
	  src/dialogs/Makefile_insert, src/dialogs/swatches.h,
	  src/dialogs/swatches.cpp:

	  Bringing in new color class.
	
2006-03-23  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* packaging/macosx/Resources/bin/inkscape: Fix a packaging
	  problem on Mac OSX where Inkscape wouldn't open if one of the
	  parent directories containing the app bundle contained a '#' in
	  its name.  Fixes bug #1443072.

2006-03-15  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* share/icons/Makefile.am: Update a makefile after the icon file
	  renaming.

2005-03-14  MenTaLguY  <mental@rydia.net>

	* src/layer-fns.h, src/dialogs/layer-properties.cpp,
	  src/dialogs/layer-properties.h, src/layer-fns.cpp:

	  merged patch #1447043 from Andrius "knutux" R. to create sub-layers

2006-03-14  MenTaLguY  <mental@rydia.net>

	* src/Makefile_insert, src/display/nr-arena-item.cpp,
	  src/display/nr-arena-item.cpp, src/gc-finalized.h, src/gc-managed.h,